--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -63,4 +63,5 @@
     <color name="md_theme_dark_surfaceTint">#FFB4A9</color>
     <color name="md_theme_dark_outlineVariant">#534341</color>
     <color name="md_theme_dark_scrim">#000000</color>
+    <color name="ultra_zero">#00000000</color>
 </resources>
